# gcad

./: .README.md  .gitignore  A.gcad  Cargo.toml  Dioxus.toml  GCAD.md  README.md  Rect.gcad  fig.py  gcad.txt  gcad_tips.txt  geo.py  graph.py  index.py  parsing.py  point.py  requirements.txt  solve.py  solve_A.py  solver.py  test.gcad  test.py  tri.py  util.py
assets/: main.css
examples/: parse.rs
solver/: __init__.py  cluster.py  fig.py  geo.py  index.py  points.py  solver.py  space.py  test.py  util.py
src/: bin.rs  calc.pest  constraints.pest  constraints.rs  document.rs  draw.rs  elements.rs  geo.rs  lib.rs  main.rs  order.rs  parse.rs  parsing.rs  process.rs  solve.rs  test.gcad  util.rs  vector.rs
src/constraints/: constraints.rs  elements.rs  flags.rs  mod.rs  modifiers.rs
src/document/: exprs.rs  parse.rs  process.rs
src/document/exprs/: constraints.rs  draw.rs  elements.rs
src/document/process/: draw.rs  order.rs  solve.rs
src/math/: geo.rs  number.rs  vector.rs
src/order/: bfs.rs  bfs_order.rs  mod.rs
src/parse/: calc.rs  elements.pest  elements.rs  exprs.rs  math.rs  mod.rs  parsing.rs
src/parse/exprs/: constraints.rs  draw.rs  elements.rs
src/solve/: brute.rs  brute_solve.rs  dist.rs  dist_solve.rs  mod.rs
tests/: A.gcad  Rect.gcad
