[package]
name = "gcad-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "gsolve"
path = "src/lib.rs"

[[bin]]
name = "gcad"
path = "src/bin.rs"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
ansi_term = "0.12.1"
bimap = "0.6.3"
bitflags = "2.8.0"
clap = { version = "4.5.29", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
itertools = "0.14.0"
rsille = "2.3.1"
term_size = "0.3.2"
