[package]
name = "gcad"
version = "0.1.0"
authors = ["GroveDG"]
description = "2D CAD with geometry notation"
repository = "https://github.com/GroveDG/gcad"
edition = "2021"

[[bin]]
name = "gcad"
path = "src/bin.rs"

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
ansi_term = "0.12.1"
bimap = "0.6.3"
clap = { version = "4.5.29", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
rsille = "2.3.1"
term_size = "0.3.2"
gsolve = { path = "../gsolve" }
inquire = "0.7.5"
