[package]
name = "gcad"
version = "0.1.0"
authors = ["GroveDG"]
description = "2D CAD with geometry notation"
repository = "https://github.com/GroveDG/gcad"
edition = "2024"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[bin]]
name = "gcad"
path = "src/bin.rs"

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
eframe = "0.31.1"
gsolve = { path = "../gsolve" }
multimap = "0.10.0"
